Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/NoImportedNoClasses.out
NoImportedNoClasses.java:10:1: compiler.err.cant.resolve.location: kindname.static, UNKNOWN, null, null, (compiler.misc.location: kindname.interface, java.lang.Runnable, null)
1 error