Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/NoImportedNoClasses.java
/*
 * @test /nodynamiccopyright/
 * @bug 7101822
 * @summary Verify that statically importing non-existing constant causes a compile-time error
 *          for files without a class.
 *
 * @compile/fail/ref=NoImportedNoClasses.out -XDrawDiagnostics NoImportedNoClasses.java
 */

import static java.lang.Runnable.UNKNOWN;
